Implement user story 16 and tests.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@285 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/tests.html
+++ b/gobotany/static/tests.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="REFRESH"
-          content="0;url=/dojo/util/doh/runner.html?testModule=gobotany.tests.filters&registerModulePath=gobotany,../../../static/gobotany" /> 
+          content="0;url=/dojo/util/doh/runner.html?testModule=gobotany.tests.all&registerModulePath=gobotany,../../../static/gobotany" /> 
     </head>
   <body>
     Redirecting...
